<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hadees e Kisa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Custom strings -->
    <!-- a_m_b == Activity Main Button -->
	<string name="share_menu_title">Share</string>
	<string name="a_m_bismillah_description">Bismillah</string>
	<string name="a_m_b_hadees_e_kisa">Hadees-e-Kisa</string>
	<string name="a_m_b_quotes">Ahl-e-Bait (AS) Quotes</string>
	<string name="a_m_b_about_us">About</string>
	<string name="a_m_b_exit">Exit</string>
	<string name="show_kisa_images_description">Hadees-e-Kisa</string>
	<string name="kisamenu_shareTitle">Share</string>
	<string name="kisamenu_overflow"></string>
	<string name="quotes_image_description">Islamic Quotes</string>
	<string name="about_us_detail">
	    Welcome to Hadees-e-Kisa app.
	    This is totally free and without ads.
	    You can download Quotes images in our next version. (Available Soon)
	    
	    kindly pray for me and for my family.
	</string>
</resources>
